# booking-assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py  settings.py  usage.py
src/agent/booking/: builder.py  constants.py  context.py  decider.py  enums.py  graph.py  prompts.py  runner.py  service.py  state.py
src/agent/booking/tools/: __init__.py  clarify_answer.py  confirm_changing_booking.py  keep_initial_booking.py  leave_initial_booking.py  reject_changing_booking.py  transfer_to_operator.py
src/agent/common/: decider.py  graph.py  helpers.py  runner.py  service.py  state.py
src/agent/common/decorators/: handle_exceptions.py  tool_loging.py
src/api/: app.py  dependencies.py  enums.py  lifespan.py  logger.py  main.py  metrics.py  schemas.py  settings.py
src/api/v1/routers/: booking.py  monitoring.py
src/integration/: client.py  dto.py  interface.py  mocks.py
